# graphowl

./: .gitignore  README.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: .coverage  maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: bensatankki.txt  korttimaksu.txt  monopoli.txt
project/: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
project/certs/: README.md
project/config/: dashboard.yaml  dashboard_live.yaml  dashboard_weather.yaml  demo_db.sqlite  testdashboard.yaml
project/docs/: architecture.md  classes.yuml  example.json  hours.md  instructions.md  reqs.md  sequence.txt  testing.md
project/src/: confighandler.py  connector.py  constants.py  dashboard.py  graph.py  index.py  mongodbconnector.py  services.py  tester_app.py
project/src/connectors/: connector.py  mongodbconnector.py  restapiconnector.py  sqliteconnector.py
project/src/tests/: confighandler_test.py  connector_test.py  dashboard_test.py  graph_test.py  mongodbconnector_test.py  services_test.py  sqliteconnector_test.py
project/src/ui/: app.py  carousel.py  coolbutton.py  dashboardpage.py  editconfigpage.py  editgraphspage.py  editsourcespage.py  form.py
