[tool.poetry]
name = "GraphOwl"
version = "0.1.0"
description = "A dashboard application for displaying time series data as graphs."
authors = ["Mikko Kallio"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.6.0"
pymongo = {extras = ["srv"], version = "^3.12.1"}
PyYAML = "^6.0"
matplotlib = "^3.3.0"
kiwisolver = "1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
mongomock = "^3.23.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
